examples/errors/test_file_not_found.flow
file : "nonexistent_file.txt" -> content -> print